fix background spacing on homepage

--- a/src/styles/components/_home-page.scss
+++ b/src/styles/components/_home-page.scss
@@ -6,11 +6,11 @@
   display: flex;
   height: 100%;
   justify-content: center;
-  width: 100vw;
+  // width: 100vw;
 
-  // @media (min-width: $desktop-breakpoint) {
-  //   height: 100vh;
-  // }
+  @media (min-width: $desktop-breakpoint) {
+    height: 100vh;
+  }
 }
 
 .box-layout__box {
@@ -22,7 +22,7 @@
   margin: $xl-size $m-size;
 
   @media (min-width: $desktop-breakpoint) {
-    margin: $xl-size 0;
+    // margin: $xl-size 0;
   }
 }
 
